--- a/SimpleUI/app/src/main/AndroidManifest.xml
+++ b/SimpleUI/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         <activity
             android:name=".DrinkMenuActivity"
             android:label="@string/title_activity_drink_menu"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
