--- a/SimpleUI/app/src/main/AndroidManifest.xml
+++ b/SimpleUI/app/src/main/AndroidManifest.xml
@@ -2,12 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.simpleui">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.parse.APPLICATION_ID"
+            android:value="Z9rxcvzWA9zbiXtsOssPDvxuyAXYDSIp9JFKQpSv" />
+        <meta-data
+            android:name="com.parse.CLIENT_KEY"
+            android:value="MoyCm4v4v9HtlQH7DOA7PC5MY7f6o96bReUeWQGS" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
